force-app/main/default/objects/Job_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Stores the date candidate applied for the job.</description>
    <inlineHelpText>Enter date applied for the job.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>