force-app/main/default/objects/Job_Application__c/fields/Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Type__c</fullName>
    <label>Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Standard Deduction</fullName>
            </value>
            <value>
                <fullName>Itemized Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>