force-app/main/default/objects/Job_Application__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Long text area for entering job description.</description>
    <inlineHelpText>Enter job description</inlineHelpText>
    <label>Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>