force-app/main/default/objects/Job_Application__c/fields/Federal_Income_Tax_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Federal_Income_Tax_Withheld__c</fullName>
    <description>System calculated amount of federal income tax withheld based on salary and filing status for each year</description>
    <inlineHelpText>System calculated amount of federal income tax withheld based on salary and filing status for each year</inlineHelpText>
    <label>Yearly Federal Income Tax Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>