force-app/main/default/objects/Job_Application__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Field used to select a date on which to follow up on job application.</description>
    <inlineHelpText>Enter date to follow up on job application.</inlineHelpText>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>