force-app/main/default/objects/Job_Application__c/fields/Itemized_Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Itemized_Deduction_Amount__c</fullName>
    <description>Total amount of itemized deductions</description>
    <inlineHelpText>Enter total amount of itemized deductions</inlineHelpText>
    <label>Itemized Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>