force-app/main/default/objects/Job_Application__c/fields/Job_Posting_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_URL__c</fullName>
    <description>URL for tracking the job posting URL</description>
    <inlineHelpText>Enter URL for job posting.</inlineHelpText>
    <label>Job Posting URL</label>
    <type>Url</type>
</CustomField>