force-app/main/default/objects/Job_Application__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <inlineHelpText>This field is use to track if the job is Contract, Full-time, Part-time, Temporary, etc.</inlineHelpText>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>