force-app/main/default/objects/Job_Application__c/fields/Jooble_Id__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This field is populated if a job application record is created by a callout to the Jooble API.</inlineHelpText>
    <label>Jooble Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>