force-app/main/default/objects/Job_Application__c/fields/Jooble_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Last_Updated__c</fullName>
    <inlineHelpText>Returns the last time Jooble updated the job posting.</inlineHelpText>
    <label>Jooble Last Updated</label>
    <type>Date</type>
</CustomField>