force-app/main/default/objects/Job_Application__c/fields/Jooble_Source__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Source__c</fullName>
    <inlineHelpText>The Source of the job returned from Jooble.</inlineHelpText>
    <label>Jooble Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>