force-app/main/default/objects/Job_Application__c/fields/Medicare_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Withheld__c</fullName>
    <description>System calculated amount of Medicare withheld based on salary and filing status for each year</description>
    <inlineHelpText>System calculated amount of Medicare withheld based on salary and filing status for each year</inlineHelpText>
    <label>Yearly Medicare Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>