force-app/main/default/objects/Job_Application__c/fields/Monthly_Federal_Income_Tax_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Federal_Income_Tax_Withheld__c</fullName>
    <label>Monthly Federal Income Tax Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>