force-app/main/default/objects/Job_Application__c/fields/Monthly_Social_Security_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Social_Security_Withheld__c</fullName>
    <description>System calculated amount of social security withheld pay per month</description>
    <inlineHelpText>System calculated amount of social security withheld pay per month</inlineHelpText>
    <label>Monthly Social Security Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>