force-app/main/default/objects/Job_Application__c/fields/Monthly_Take_Home_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Take_Home_Amount__c</fullName>
    <description>System calculated amount of take-home pay per month</description>
    <inlineHelpText>System calculated amount of take-home pay per month</inlineHelpText>
    <label>Monthly Take-Home Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>