force-app/main/default/objects/Job_Application__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Rich text area to track notes regarding job application.</description>
    <inlineHelpText>Enter any notes relevant to the job application.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>