force-app/main/default/objects/Job_Application__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>Field used to store the position name or title for the job.</description>
    <inlineHelpText>Enter the position name or job title.</inlineHelpText>
    <label>Position/Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>