force-app/main/default/objects/Job_Application__c/fields/Rating_f__c.field-meta.xml
<CustomField>
    <fullName>Rating_f__c</fullName>
    <description>Formula field used to visualize rating chosen in the Rating Scale field.</description>
    <formula>IMAGE( 
CASE( Rating_Scale__c , 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field used to visualize rating chosen in the Rating Scale field.</inlineHelpText>
    <label>Rating (f)</label>
    <type>Text</type>
</CustomField>