force-app/main/default/objects/Job_Application__c/fields/Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>Rating_Scale__c</fullName>
    <description>Field used to attractiveness of job on a scale of 1-5.</description>
    <inlineHelpText>Select attractiveness of job on a scale of 1-5.</inlineHelpText>
    <label>Rating Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>