force-app/main/default/objects/Job_Application__c/fields/Salary_Type__c.field-meta.xml
<CustomField>
    <fullName>Salary_Type__c</fullName>
    <label>Salary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
                <default>true</default>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>