force-app/main/default/objects/Job_Application__c/fields/Social_Security_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Withheld__c</fullName>
    <defaultValue>0</defaultValue>
    <description>System calculated amount of social security withheld based on salary and filing status for each year</description>
    <inlineHelpText>System calculated amount of social security withheld based on salary and filing status for each year</inlineHelpText>
    <label>Yearly Social Security Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>