force-app/main/default/objects/Job_Application__c/fields/Standard_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Standard_Deduction__c</fullName>
    <description>Amount for Standard Deduction for filing status</description>
    <inlineHelpText>System populated amount for Standard Deduction for filing status</inlineHelpText>
    <label>Standard Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>