force-app/main/default/objects/Job_Application__c/fields/Take_Home_Amount__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Amount__c</fullName>
    <description>Yearly amount leftover after federal income tax, social security, and Medicare withholdings</description>
    <inlineHelpText>Yearly amount leftover after federal income tax, social security, and Medicare withholdings</inlineHelpText>
    <label>Yearly Take-Home Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>