force-app/main/default/objects/Job_Application__c/fields/Tax_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Filing_Status__c</fullName>
    <description>Allows selection of tax filing status to calculate tax withholdings</description>
    <inlineHelpText>Select tax filing status</inlineHelpText>
    <label>Tax Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Married, filing jointly</fullName>
            </value>
            <value>
                <fullName>Married, filing separately</fullName>
            </value>
            <value>
                <fullName>Head of Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>