force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Salary__c</columns>
    <columns>Salary_Type__c</columns>
    <columns>Jooble_Id__c</columns>
    <columns>Jooble_Source__c</columns>
    <columns>Jooble_Last_Updated__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>